[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
bevy-inspector-egui = "0.11"
rand = "0.8.5"
#leafwing-input-manager = "0.3.0"
flock_gui_plugin = { path = "../flock_gui_plugin" }
flock_player_plugin = { path = "../flock_player_plugin" }
flock_state_plugin = { path = "../flock_state_plugin" }
flock_tilemap_plugin = { path = "../flock_tilemap_plugin" }
